Move Gluon theme and stylesheets from kit to plugins